project continuation- end of part 1
