# apps/product-service/src/controllers/product.controller.ts
@@ -1,0 +1,388 @@
+import {
+  AuthError,
+  NotFoundError,
+  ValidationError,
+} from "@packages/error-handler";
+import { imagekit } from "@packages/libs/imageKit";
+import prisma from "@packages/libs/prisma";
+import { NextFunction, Request, Response } from "express";
+
+// Get product categories
+export const getCategories = async (
+  req: Request,
+  res: Response,
+  next: NextFunction
+) => {
+  try {
+    const config = await prisma.site_config.findFirst();
+
+    if (!config) {
+      return res.status(404).json({ message: "Categories not found" });
+    }
+
+    return res.status(200).json({
+      categories: config.categories,
+      subCategories: config.subCategories,
+    });
+  } catch (error) {
+    return next(error);
+  }
+};
+
+// Create discount code
+export const createDiscountCode = async (
+  req: any,
+  res: Response,
+  next: NextFunction
+) => {
+  try {
+    const { public_name, discountType, discountValue, discountCode } = req.body;
+
+    const isDiscountCodeExist = await prisma.discount_codes.findUnique({
+      where: {
+        discountCode,
+      },
+    });
+
+    if (isDiscountCodeExist) {
+      throw new ValidationError(
+        "Discount code already available. Please use a different code!"
+      );
+    }
+
+    const discount_code = await prisma.discount_codes.create({
+      data: {
+        public_name,
+        discountType,
+        discountValue: parseFloat(discountValue),
+        discountCode,
+        sellerId: req.seller.id,
+      },
+    });
+
+    res.status(201).json({
+      success: true,
+      discount_code,
+    });
+  } catch (error) {
+    next(error);
+  }
+};
+
+// Get discount code
+export const getDiscountCode = async (
+  req: any,
+  res: Response,
+  next: NextFunction
+) => {
+  try {
+    const discount_codes = await prisma.discount_codes.findMany({
+      where: {
+        sellerId: req.seller.id,
+      },
+    });
+
+    res.status(200).json({
+      success: true,
+      discount_codes,
+    });
+  } catch (error) {
+    next(error);
+  }
+};
+
+// Delete discount code
+export const deleteDiscountCode = async (
+  req: any,
+  res: Response,
+  next: NextFunction
+) => {
+  try {
+    const { id } = req.params;
+    const sellerId = req.seller?.id;
+    const discountCode = await prisma.discount_codes.findUnique({
+      where: {
+        id,
+      },
+      select: { id: true, sellerId: true },
+    });
+
+    if (!discountCode) {
+      throw new NotFoundError("Discount code not found!");
+    }
+
+    if (discountCode.sellerId !== sellerId) {
+      throw new ValidationError("Unauthorized access!");
+    }
+
+    await prisma.discount_codes.delete({ where: { id } });
+
+    res.status(200).json({
+      success: true,
+      message: "Discount code successfully deleted",
+    });
+  } catch (error) {
+    next(error);
+  }
+};
+
+// upload product image
+export const uploadProductImage = async (
+  req: Request,
+  res: Response,
+  next: NextFunction
+) => {
+  try {
+    const { fileName } = req.body;
+
+    const response = await imagekit.upload({
+      file: fileName,
+      fileName: `product-${Date.now()}.jpg`,
+      folder: "/products",
+    });
+
+    res.status(201).json({
+      file_url: response.url,
+      fileId: response.fileId,
+    });
+  } catch (error) {
+    next(error);
+  }
+};
+
+// delete product image
+export const deleteProductImage = async (
+  req: Request,
+  res: Response,
+  next: NextFunction
+) => {
+  try {
+    const { fileId } = req.body;
+
+    const response = await imagekit.deleteFile(fileId);
+
+    res.status(200).json({
+      success: true,
+      response,
+    });
+  } catch (error) {
+    next(error);
+  }
+};
+
+// create product
+export const createProduct = async (
+  req: any,
+  res: Response,
+  next: NextFunction
+) => {
+  try {
+    const {
+      title,
+      short_description,
+      detailed_description,
+      warranty,
+      custom_specifications,
+      slug,
+      tags,
+      cash_on_delivery,
+      brand,
+      video_url,
+      category,
+      colors = [],
+      sizes = [],
+      discountCodes,
+      stock,
+      sale_price,
+      regular_price,
+      subCategory,
+      customProperties = {},
+      images = [],
+    } = req.body;
+
+    if (
+      !title ||
+      !short_description ||
+      !slug ||
+      !category ||
+      !subCategory ||
+      !sale_price ||
+      !images ||
+      !tags ||
+      !stock ||
+      !regular_price
+    ) {
+      throw new ValidationError("Missing required fields!");
+    }
+
+    if (!req.seller.id) {
+      throw new AuthError("Only seller can create products!");
+    }
+
+    const slugChecking = await prisma.products.findUnique({
+      where: { slug },
+    });
+
+    if (slugChecking) {
+      throw new ValidationError(
+        "Slug already in use. Please use a different slug!"
+      );
+    }
+
+    const newProduct = await prisma.products.create({
+      data: {
+        title,
+        short_description,
+        detailed_description,
+        warranty,
+        cashOnDelivery: cash_on_delivery,
+        slug,
+        shopId: req.seller?.shop?.id,
+        tags: Array.isArray(tags) ? tags : tags.split(","),
+        brand,
+        video_url,
+        category,
+        subCategory,
+        colors: colors || [],
+        discount_codes: discountCodes.map((codeId: string) => codeId),
+        sizes: sizes || [],
+        stock: parseInt(stock),
+        sale_price: parseFloat(sale_price),
+        regular_price: parseFloat(regular_price),
+        custom_properties: customProperties || {},
+        custom_specifications: custom_specifications || {},
+        images: {
+          create: images
+            .filter((img: any) => img && img.fileId && img.file_url)
+            .map((image: any) => ({
+              file_id: image.fileId,
+              url: image.file_url,
+            })),
+        },
+      },
+      include: { images: true },
+    });
+
+    res.status(201).json({
+      success: true,
+      newProduct,
+    });
+  } catch (error) {
+    next(error);
+  }
+};
+
+// get logged in seller products
+export const getShopProducts = async (
+  req: any,
+  res: Response,
+  next: NextFunction
+) => {
+  try {
+    const sellerId = req.seller?.shop?.id;
+
+    const products = await prisma.products.findMany({
+      where: { shopId: sellerId },
+      include: { images: true },
+    });
+
+    res.status(200).json({
+      success: true,
+      products,
+    });
+  } catch (error) {
+    next(error);
+  }
+};
+
+// delete product
+export const deleteProduct = async (
+  req: any,
+  res: Response,
+  next: NextFunction
+) => {
+  try {
+    const { productId } = req.params;
+    const sellerId = req.seller?.shop?.id;
+
+    const product = await prisma.products.findUnique({
+      where: { id: productId },
+      select: { id: true, shopId: true, isDeleted: true },
+    });
+
+    if (!product) {
+      throw new NotFoundError("Product not found");
+    }
+
+    if (product.shopId !== sellerId) {
+      throw new ValidationError("Unauthorized action");
+    }
+
+    if (product.isDeleted) {
+      throw new ValidationError("Product is already deleted.");
+    }
+
+    const deletedProduct = await prisma.products.update({
+      where: { id: productId },
+      data: {
+        isDeleted: true,
+        deletedAt: new Date(Date.now() + 24 * 60 * 60 * 1000),
+      },
+    });
+
+    res.status(200).json({
+      success: true,
+      message:
+        "Product is scheduled for deletion in 24hrs. You can restore it within this timeframe.",
+      deletedAt: deletedProduct.deletedAt,
+    });
+  } catch (error) {
+    next(error);
+  }
+};
+
+// restore deleted product
+export const restoreProduct = async (
+  req: any,
+  res: Response,
+  next: NextFunction
+) => {
+  try {
+    const { productId } = req.params;
+    const sellerId = req.seller?.shop?.id;
+
+    const product = await prisma.products.findUnique({
+      where: { id: productId },
+      select: { id: true, shopId: true, isDeleted: true },
+    });
+
+    if (!product) {
+      throw new NotFoundError("Product not found");
+    }
+
+    if (product.shopId !== sellerId) {
+      throw new ValidationError("Unauthorized action");
+    }
+
+    if (!product.isDeleted) {
+      return res.status(400).json({
+        message: "Product is not in deleted state.",
+      });
+    }
+
+    await prisma.products.update({
+      where: { id: productId },
+      data: {
+        isDeleted: false,
+        deletedAt: null,
+      },
+    });
+
+    return res.status(200).json({
+      success: true,
+      message: "Product restored successfully",
+    });
+  } catch (error) {
+    return next(error);
+  }
+};
