# apps/product-service/src/main.ts
@@ -1,0 +1,43 @@
+import express from "express";
+import "./jobs/product-cron.job";
+import cors from "cors";
+import cookieParser from "cookie-parser";
+import { errorMiddleware } from "@packages/error-handler/error-middleware";
+import router from "./routes/product.router";
+import swaggerUi from "swagger-ui-express";
+
+const swaggerDocument = require("./swagger-output.json");
+
+const app = express();
+
+app.use(
+  cors({
+    origin: ["http://localhost:3000"],
+    allowedHeaders: ["Authorization", "Content-Type"],
+    credentials: true,
+  })
+);
+app.use(express.json({ limit: "100mb" }));
+app.use(cookieParser());
+
+app.get("/ping", (req, res) => {
+  res.send({ message: "Hello Product API" });
+});
+
+app.use("/api-docs", swaggerUi.serve, swaggerUi.setup(swaggerDocument));
+app.get("/docs-json", (req, res) => res.json(swaggerDocument));
+
+// Routes
+app.use("/api", router);
+
+app.use(errorMiddleware);
+
+const port = process.env.PORT || 6002;
+const server = app.listen(port, () => {
+  console.log(`Product service is running at http://localhost:${port}/product`);
+  console.log(`Swagger Docs available at http://localhost:${port}/api-docs`);
+});
+
+server.on("error", (err) => {
+  console.log("Server Error:", err);
+});
